--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap');
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+}
+
+.manrope {
+  display: flex;
+
+  font-family: 'Manrope';
 }
 
 .logo {
